<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.collectors.CollectorDetailActivity">

    <ImageView
        android:id="@+id/back_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/ivArrowLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_left" />

    <LinearLayout
        android:id="@+id/collector_layout_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:padding="12dp">

        <ImageView
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:id="@+id/artist_image_view"
            android:contentDescription="@string/ivProfile"
            android:src="@drawable/ic_avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/collectorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="CollectorName" />

            <TextView
                android:id="@+id/collectorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="collector@example.com" />

            <TextView
                android:id="@+id/collectorTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="3107761457" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_marginTop="20dp"
        android:background="@color/dark_gray"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorColor="@color/green"
        app:tabSelectedTextColor="@color/green"
        app:tabTextColor="@color/gray"
        android:id="@+id/tabLayout"
        app:tabTextAppearance="@style/CustomTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/collector_layout_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>