<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/app_background">

    <android.widget.ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_new_24"
                android:contentDescription="@string/back"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agregar_cancion"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp" />

            <EditText
                android:importantForAutofill="no"
                android:inputType="text"
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/track_name"
                android:maxLength="200"
                android:textColor="#505050"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="35dp" />

            <EditText
                android:importantForAutofill="no"
                android:id="@+id/et_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/track_duration"
                android:inputType="time"
                android:textColor="#505050"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="35dp" />

            <TextView
                android:id="@+id/error_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/track_invalid_format_msg"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/et_duration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/btn_add_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_track"
                android:backgroundTint="#4CAF50"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/et_duration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="60dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </android.widget.ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>